fix blocking page